# fin-agent-market-analysis

./: .env.tamplate  .env.template  .gitignore  AGENTS.md  README.md  docker-compose.prod.yaml  docker-compose.yaml  graph_builder_quick_test.ipynb  main.py  main_temp.py  pyproject.toml  requirements.txt  startup.py
.github/workflows/: deployment-prod.yml  deployment.yml  pre-action.yml
api/: models.py
archive/: README.md
archive/google_search_api/: google_search_api.py
archive/google_search_api/google_search_api/: tool.py
archive/pipelines/: googlesearch_pipeline.py
assets/: report_template.md
backtesting/: README.md  data_builder.py  run_full_pipeline.py  setup_database.py  weekly_batch_generator.py  weekly_reporter.py
bs4/: __init__.py
images/backend/: Dockerfile
pipelines/: agent_pipeline_example.py  company_facts_analyzer_pipeline.py  google_searcher_pipeline.py  profitability_stability_pipeline.py  stockinfo_pipline.py
requests/: __init__.py
src/data/: cache.py  models.py
src/graph/: builder.py
src/graph/agents/: market_agent.py
src/graph/nodes/: __init__.py  base.py  company_facts_analyzer.py  edgar_report.py  google_crawler.py  google_searcher.py  hantoo_financial.py  naver_news_searcher.py  report_assistant.py  retrieve_esg.py  rss_feeder.py  stockinfo_report.py  supervisor.py  us_financial.py  us_financial_fmg.py  usa_financial_api.py  weekly_reporter.py
src/tools/: __init__.py
src/utils/: const.py
tenacity/: __init__.py
tests/: test_google_crawler.py  test_google_searcher.py
tests/us_stock/: raw_financial_metrics_test.py
(+26 files in other folders)
