[project]
name = "market-analysis-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "dependency-injector>=4.46.0",
    "docling>=2.28.4",
    "fastapi>=0.115.11",
    "feedparser>=6.0.11",
    "goose3>=3.1.19",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-milvus>=0.1.8",
    "langchain-openai>=0.3.7",
    "langchain-upstage>=0.6.0",
    "langgraph>=0.3.5",
    "langgraph-supervisor>=0.0.17",
    "lxml[html-clean]>=5.3.1",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.9.9",
    "tavily-python>=0.5.1",
    "uvicorn>=0.34.0",
    "opik==1.7.9",
    "yfinance==0.2.59",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]
